--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Mikez Page</title>
+  <title>Mikez Homepage</title>
 </head>
 <body>
-  <h1 id="heading">Nothing here.</h1>
+  <h1 id="heading">Nothing here yet.</h1>
 </body>
 </html>
